tests/ui/type-alias-impl-trait/hidden_behind_struct_field3.stderr
error: item constrains opaque type that is not in its signature
  --> $DIR/hidden_behind_struct_field3.rs:19:27
   |
LL |         vec![Foo { field: () }].into_iter()
   |                           ^^
   |
   = note: this item must mention the opaque type in its signature in order to be able to register hidden types
note: this item must mention the opaque type in its signature in order to be able to register hidden types
  --> $DIR/hidden_behind_struct_field3.rs:18:8
   |
LL |     fn foo() -> Self::Assoc {
   |        ^^^

error: aborting due to 1 previous error

